@@ -1,12 +1,20 @@
 # -*- coding: utf-8 -*-
 
+import os, os.path
+
 from gourmet.plugin import ImporterPlugin
 from gourmet.importers.importer import Tester
 from gourmet.recipeManager import get_recipe_manager
 from gourmet.threadManager import get_thread_manager
-
 import gxml2_importer, gxml_importer
 
+test_dir = os.path.split(__file__)[0] # our directory src/lib/plugins/import_export/plugin/*/
+test_dir = os.path.split(test_dir)[0] # one back... src/lib/plugins/import_export/plugin/
+test_dir = os.path.split(test_dir)[0] # one back... src/lib/plugins/import_export/
+test_dir = os.path.split(test_dir)[0] # one back... src/lib/plugins/
+test_dir = os.path.split(test_dir)[0] # one back... src/lib/
+test_dir = os.path.split(test_dir)[0] # one back... src/
+test_dir = os.path.join(test_dir,'tests','recipe_files')
 
 class GxmlImportTester:
 
@@ -81,6 +89,6 @@ class GourmetXMLPlugin (ImporterPlugin):
         tester(recipe_objects, filename, rd)
         '''
         return [
-            ('/home/tom/Projects/grecipe-manager/src/tests/recipe_files/test_set.grmt',
+            (os.path.join(test_dir,'test_set.grmt'),
              GxmlImportTester().run_test),
              ]
