@@ -1,0 +1,39 @@
+MMMMM----- Recipe via Meal-Master (tm) v8.02
+ 
+      Title: Chiles Rellenos de Queso
+ Categories: Appetizers, Main dish, Cheese, Mexican
+      Yield: 2 servings
+ 
+      2    Chiles, calif.; roast & peel        1    Eggs; separated
+  1 1/3 oz Cheese, monterey jack            3/16 c  Flour, all purpose
+           Oil; for frying               
+
+MMMMM------------------------TOMATO SAUCE-----------------------------
+  1 1/3 sm Tomatoes; peeled                 3/16 ts Salt
+    1/3 sm Onion                             2/3 sm Chiles, calif.
+    1/3    Garlic clove                          pn Cinnamon, ground
+    1/3 tb Oil, vegetable                        pn Cloves, ground
+   3/16 c  Chicken broth                  
+ 
+  Prepare tomato sauce; keep warm.
+  
+  Cut as small a slit as possible in one side of each chile to remove
+  seeds. Leave stems on. Pat chiles dry with paper towels.
+  
+  Cut cheese into long thin sticks, one for each chile. Place one stick
+  in each chile, using more if chiles are large. If chiles are loose
+  and open, wrap around cheese and fasten with wooden picks.
+  
+  Pour oil 1/4" deep into large skillet. Heat oil to 365 F. Beat egg
+  whites in a medium bowl until stiff. Beat egg yolks lightly in a
+  small bowl and add all at once to beaten egg whites. Fold lightly but
+  thoroughly. Roll chiles in flour, then dip in egg mixture to coat.
+  Fry in hot oil until golden brown, turning with a spatula. Drain on
+  paper towels. Serve immediately topped with tomato sauce.
+  
+  Tomato Sauce: Combine tomatoes, onion and garlic in blender or food
+  pro- cessor; puree. Heat oil in a medium saucepan, add tomato
+  mixture. Cook 10 minutes, stirring occasionally. Add broth, salt,
+  chiles, cloves and cinnamon. Simmer gently 15 minutes.
+ 
+MMMMM
